--- a/tugas1day5.html
+++ b/tugas1day5.html
@@ -1,81 +1,123 @@
 <html>
     <script>
         do {
-            var welcome = prompt('Selamat datang apa yang ini Anda lakukan?\n1.Belanja\n2.Tambah Buah\n3.Hapus Buah\n4.List Buah\5.Exit').toLowerCase()
-            var stokJeruk = 15
-            var stokApel = 10
-            var stokAnggur = 7
+            var welcome = parseInt(prompt("Selamat datang apa yang ini Anda lakukan?\n1.Belanja\n2.Tambah Buah\n3.Hapus Buah\n4.List Buah\n5.Exit"));
+            // var stokJeruk = 15
+            // var stokApel = 10
+            // var stokAnggur = 7
+            var cart = [];
+            var fruit = ["Jeruk", "Apel", "Anggur"];
+            var price = [10000, 15000, 20000];
+            var stock = [5, 7, 8];
+
             do {
-                if (welcome == 'ya'){
-                    let jeruk
+                if (welcome == 1) {
+                    fruit = fruit.concat(plusfruit);
+                    price = price.concat(plusprice);
+                    stock = stock.concat(plusstock);
+                    for (let i = 0; i < fruit.length; i++) {
+                        do {
+                            cart[i] = prompt(`Berapa ${fruit[i]} yang Anda beli?`);
+                            if (cart[i] > stock[i]) {
+                                alert(`Stok ${fruit[i]} hanya ada ${stock[i]}`);
+                            } else if (cart[i] == 0) {
+                                alert(`Tidak boleh kosong`);
+                            } else if (!(cart[i] > 0)) {
+                                alert("Inputan salah");
+                            }
+                        } while (cart[i] > stock[i] || cart[i] <= 0 || !(cart[i] > 0));
+                    }
+                    // do {
+                    //     cart[1] = prompt(`Berapa ${fruit[1]} yang Anda beli?`);
+                    //     if (cart[1] > stock[1]){
+                    //         alert(`Stok ${fruit[1]} hanya ada ${stock[1]}`)
+                    //     }
+                    //     else if (cart[1] == 0){
+                    //         alert(`Tidak boleh kosong`)
+                    //     }
+                    //     else if (!(cart[1] > 0)){
+                    //         alert(`Inputan salah`)
+                    //     }
+                    // } while (cart[1] > stock[1] || cart[1] <= 0 || !(cart[1]>0));
+                    // do {
+                    //     cart[2] = prompt(`Berapa ${fruit[2]} yang Anda beli?`);
+                    //     if (cart[2] > stock[2]){
+                    //         alert(`Stok ${fruit[2]} hanya ada ${stock[2]}`)
+                    //     }
+                    //     else if (cart[2] == 0){
+                    //         alert(`Tidak boleh kosong`)
+                    //     }
+                    //     else if (!(cart[2] > 0)){
+                    //         alert(`Inputan salah`)
+                    //     }
+                    // } while (cart[2] > stock[2] || cart[2] <= 0 || !(cart[2]>0));
+                    // let hjeruk= 10000; hapel=15000; hanggur=20000
+                    var total = 0;
+                    for (let i = 0; i < fruit.length; i++) {
+                        total += cart[i] * price[i];
+                    }
+                    var totalbuah = "";
+                    for (let i = 0; i < fruit.length; i++) {
+                        totalbuah += `${fruit[i]} @${cart[i]} = ${cart[i] * price[i]}\n`;
+                    }
+                    alert(`Jadi Anda belanja\n${totalbuah}Total Rp${total}`);
+                    // let totalbelanja = +(cart[0] * price[0]) + +(cart[1] * price[1]) + +(cart[2] * price[2])
+                    // alert(`Jadi Anda belanja\n\nJeruk = ${jeruk}\nApel = ${apel}\nAnggur = ${anggur}\n\nTotal = ${totalbelanja}`);
+                    let bayar;
                     do {
-                        jeruk=prompt('Berapa Jeruk yang Anda beli?');
-                        if (jeruk>stokJeruk){
-                        alert(`Stok Jeruk hanya ada ${stokJeruk}`)
+                        bayar = prompt("Masukkan Jumlah uang Anda");
+                        if (bayar == total) {
+                            alert("Terima kasih atas pembayarannya");
+                        } else if (bayar < total) {
+                            alert(`Pembayaran Anda kurang ${total - bayar}`);
+                        } else {
+                            alert(`Terima kasih, kembaliannya ${bayar - total}`);
                         }
-                        else if (jeruk == 0){
-                            alert(`Tidak boleh kosong`)
-                        }
-                        else if (!(jeruk>0)){
-                            alert('Inputan salah')
-                        }
-                    } while (jeruk>stokJeruk || jeruk == 0 || !(jeruk>0));
-                    let apel
+                    } while (bayar < total);
+
+                    // for (let i = 0; i < array.fruit; i++) {
+                    //     stock += [i];
+
+                    // }
+                    // var stock = []
+                    // var stokAnggur=stokAnggur-anggur
+                    // var stokApel=stokApel-apel
+                    // var stokJeruk=stokJeruk-jeruk
                     do {
-                        apel=prompt('Berapa Apel yang Anda beli?');
-                        if (apel>stokApel){
-                            alert(`Stok Apel hanya ada ${stokApel}`)
+                        var bye = prompt(`Apakah Anda mau belanja lagi\n1. Ya\n2. Kembali ke Menu Utama`);
+                        if (bye == "tidak") {
+                            alert("Terima kasih! Silahkan datang kembali!");
+                        } else if (!(bye > 0 && bye < 3)) {
+                            alert("Harap masukkan inputan yang benar");
                         }
-                        else if (apel == 0){
-                            alert(`Tidak boleh kosong`)
-                        }
-                    } while (apel>stokApel || apel == 0);
-                    let anggur
+                    } while (!(bye > 0 && bye < 3));
+                } else if (!(welcome > 0) && welcome < 6) {
+                    alert("Harap masukkan inputan yang benar");
+                } else if (welcome == 2) {
                     do {
-                        anggur=prompt('Berapa Anggur yang Anda beli?');
-                        if (anggur>stokAnggur){
-                            alert(`Stok Anggur hanya ada ${stokAnggur}`)
-                        }
-                        else if (anggur == 0){
-                            alert(`Tidak boleh kosong`)
-                        }
-                    } while (anggur>stokAnggur || anggur == 0);
-                    let hjeruk= 10000; hapel=15000; hanggur=20000
-                    let totalbelanja = +(jeruk*hjeruk) + +(apel*hapel) + +(anggur*hanggur)
-                        alert(`Jadi Anda belanja\n\nJeruk = ${jeruk}\nApel = ${apel}\nAnggur = ${anggur}\n\nTotal = ${totalbelanja}`);
-                    let bayar 
+                        var plusfruit = prompt(`Buah apa yang ingin anda tambahkan?`);
+                        var plusstock = prompt(`Berapa stok ${plusfruit}`);
+                        var plusprice = prompt(`Berapa harga ${plusfruit}`);
+                        var plusquestion = prompt(`Apakah Anda ingin menambah buah lagi\n1. Ya\n2. Tidak`);
+                    } while (plusquestion == 1);
+                } else if (welcome == 3) {
                     do {
-                        bayar=prompt('Masukkan Jumlah uang Anda')
-                        if (bayar == totalbelanja){
-                            alert('Terima kasih atas pembayarannya')
+                        var output = "";
+                        for (let i = 0; i < fruit.length; i++) {
+                            output += `${+i + 1}.${fruit[i]}\n`;
                         }
-                        else if (bayar < totalbelanja ){
-                            alert(`Pembayaran Anda kurang ${totalbelanja-bayar}`)
-                        }
-                        else {
-                            alert(`Terima kasih, kembaliannya ${bayar-totalbelanja}`)
-                        }
-                    } while (bayar < totalbelanja);
-                    var stokAnggur=stokAnggur-anggur
-                    var stokApel=stokApel-apel
-                    var stokJeruk=stokJeruk-jeruk
-                    do {
-                        var bye = prompt('Apakah Anda mau belanja lagi "Ya/Tidak"').toLocaleLowerCase()
-                        if (bye == 'tidak'){
-                            alert('Terima kasih! Silahkan datang kembali!')
-                        }
-                        else if (!(bye == 'ya' || bye == 'tidak')) {
-                            alert('Harap masukkan inputan yang benar')
-                        }    
-                    } while (!(bye == 'ya' || bye == 'tidak'));
+                        minfruit = prompt(`Buah apa yang ingin anda hapus\n${output}\n`);
+                    } while (!(minfruit > 0 || minfruit < fruit.length));
+                } else if (welcome == 4) {
+                    var output = "";
+                    for (let i = 0; i < fruit.length; i++) {
+                        output += `${+i + 1}.${fruit[i]}: Rp ${price[i]}, stok ${stock[i]}\n`;
+                    }
+                    alert(`List buah:\n${output}`);
+                } else if (welcome == 5) {
+                    alert("Baik, silahkan datang kembali");
                 }
-                else if (!(welcome == 'ya' || welcome == 'tidak')) {
-                    alert('Harap masukkan inputan yang benar')
-                }
-                else {
-                    alert('Baik, silahkan datang kembali')
-                }
-            } while (bye == 'ya'); 
-        } while (welcome >0 && welcome <6);
+            } while (bye == 1);
+        } while (!(welcome > 0) || welcome > 6 || welcome == 2 || welcome == 3 || welcome == 4 || plusquestion == 2 || bye == 2);
     </script>
 </html>
