--- a/day10tugashtml/soal3.html
+++ b/day10tugashtml/soal3.html
@@ -6,7 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>VERSION V2.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="day10tugashtml.css">
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+        }
+
+        form {
+            width: 55%;
+            margin: 0 auto;
+        }
+    </style>
     <!-- <style>
         table,
         th,
@@ -98,7 +109,7 @@
             <h4 id="total"></h4>
         </fieldset>
     </form>
-    <script type="text/javascript" src="day10tugashtml.js"></script>
+    <script type="text/javascript" src="soal3.js"></script>
 </body>
 
 </html>
