--- a/day9tugashtml/day9tugashtml.html
+++ b/day9tugashtml/day9tugashtml.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>VERSION V1.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="day9tugashtml.css"></link>
+    <link rel="stylesheet" type="text/css" href="day9tugashtml.css">
 </head>
 
 <!-- Do together : How to input and rendering in table (left table)-->
@@ -25,7 +25,7 @@
                     <form>
                         <p>Nama: <input type="text" id="name"></p>
                         <p>Harga: <input type="number" id="price"></p>
-                        <p>Kondisi: <input type="radio" name="condition" value="Baru" id="baru">Baru <input type="radio" name="condition" id="second" value="Second">Second</p>
+                        <p>Kondisi: <input type="radio" name="condition" value="Baru" id="baru" checked>Baru <input type="radio" name="condition" id="second" value="Second">Second</p>
                         <p>Kategori: <select id="category">
                                 <option value="Elektronik">Elektronik</option>
                                 <option value="Pakaian">Pakaian</option>
@@ -42,7 +42,7 @@
                         <p>Nama: <input type="text"  id="nameH"></p>
                         <p>Harga: <input type="number"  id="priceH"></p>
                         <p></p>Kelamin: <input type="radio" name="sex" value="Jantan" checked>Jantan<input type="radio" name="sex" value="Betina">Betina</p>
-                        <p>Status: <input type="radio" name="stat" value="Liar">Liar <input type="radio" name="stat" value="Peliharaan">Peliharaan</p>
+                        <p>Status: <input type="radio" name="stat" value="Liar" checked>Liar <input type="radio" name="stat" value="Peliharaan">Peliharaan</p>
 
                         <input type="button" value="Tambahkan" onclick="function2()">
                     </form>
